[gd_scene load_steps=17 format=3 uid="uid://ni06m8vhlyt4"]

[ext_resource type="PackedScene" uid="uid://bj68njysaj2w5" path="res://character/base/character_base.tscn" id="1_g20gq"]
[ext_resource type="Script" uid="uid://d3d3h5saxicc8" path="res://character/player/player.gd" id="1_y482n"]
[ext_resource type="Resource" uid="uid://cxngkconoga1a" path="res://data/input/actions/move.tres" id="2_otwb2"]
[ext_resource type="Resource" uid="uid://brfrvk8jt77dd" path="res://data/input/actions/look.tres" id="3_otwb2"]
[ext_resource type="Resource" uid="uid://bvdjrx6xo4ahl" path="res://data/input/actions/jump.tres" id="4_wfnr8"]
[ext_resource type="Resource" uid="uid://dkhhlod7rprl1" path="res://data/input/actions/fire_primary.tres" id="5_eu8pa"]
[ext_resource type="Script" uid="uid://cx8x5g2jhcrm6" path="res://script/hitbox/hurtbox.gd" id="5_px5sl"]
[ext_resource type="Resource" uid="uid://d3ao7jq6qeasg" path="res://data/weapon/type/pistol/pistol.tres" id="7_0cf6c"]
[ext_resource type="Script" uid="uid://n578e74oit7v" path="res://script/weapon/WeaponNode.gd" id="7_qh58e"]
[ext_resource type="Script" uid="uid://b8ty0aywli1vd" path="res://script/crosshair/crosshair.gd" id="8_v2h1c"]
[ext_resource type="Script" uid="uid://dpfyrr2a6s6u0" path="res://script/hud/hud.gd" id="9_hr31g"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qh58e"]
radius = 0.34
height = 1.7

[sub_resource type="CapsuleMesh" id="CapsuleMesh_glpr6"]
radius = 0.34
height = 1.7

[sub_resource type="LabelSettings" id="LabelSettings_qh58e"]
font_size = 40
font_color = Color(0.740137, 0.925364, 1, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.501961)

[sub_resource type="LabelSettings" id="LabelSettings_hr31g"]
font_size = 40
font_color = Color(1, 0.926099, 0.725471, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.501961)

[sub_resource type="SphereShape3D" id="SphereShape3D_wfnr8"]

[node name="player" node_paths=PackedStringArray("camera_node", "camera_target_node") groups=["zombie_target"] instance=ExtResource("1_g20gq")]
collision_mask = 19
script = ExtResource("1_y482n")
health = 100.0
look_speed = 0.55
jump = ExtResource("4_wfnr8")
look = ExtResource("3_otwb2")
move = ExtResource("2_otwb2")
fire_primary = ExtResource("5_eu8pa")
collider_shape = SubResource("CapsuleShape3D_qh58e")
camera_node = NodePath("CameraTarget/Camera3D")
camera_target_node = NodePath("CameraTarget")

[node name="collider" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("CapsuleShape3D_qh58e")

[node name="capsule" type="MeshInstance3D" parent="collider" index="0"]
layers = 524288
gi_mode = 0
mesh = SubResource("CapsuleMesh_glpr6")
skeleton = NodePath("../..")

[node name="CameraTarget" type="Node3D" parent="." index="1"]
unique_name_in_owner = true
editor_description = "Target position for the Camera3D, used to smooth vertical jitter."
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.545, 0)

[node name="Camera3D" type="Camera3D" parent="CameraTarget" index="0"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.545, 0)
top_level = true
cull_mask = 524287
current = true

[node name="WeaponNode" type="Node3D" parent="CameraTarget/Camera3D" index="0" node_paths=PackedStringArray("controller", "target")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.225, -0.195, -0.605)
script = ExtResource("7_qh58e")
controller = NodePath("../../..")
weapon_type = ExtResource("7_0cf6c")
target = NodePath("../AimTarget")
metadata/_custom_type_script = "uid://n578e74oit7v"

[node name="hud" type="Control" parent="CameraTarget/Camera3D" index="1" groups=["hud"]]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("9_hr31g")
metadata/_custom_type_script = "uid://dpfyrr2a6s6u0"

[node name="crosshair_root" type="CenterContainer" parent="CameraTarget/Camera3D/hud" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="crosshair_ctl" type="Control" parent="CameraTarget/Camera3D/hud/crosshair_root" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="CrossHair" type="Node2D" parent="CameraTarget/Camera3D/hud/crosshair_root/crosshair_ctl" index="0"]
script = ExtResource("8_v2h1c")
center_enabled = true
center_size = 1.4
metadata/_custom_type_script = "uid://b8ty0aywli1vd"

[node name="score_container" type="Control" parent="CameraTarget/Camera3D/hud" index="1"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -65.0
offset_right = 65.0
offset_bottom = -40.0
grow_vertical = 0
pivot_offset = Vector2(1.45519e-11, 25)

[node name="score_label" type="Label" parent="CameraTarget/Camera3D/hud/score_container" index="0"]
layout_mode = 2
offset_right = 48.0
offset_bottom = 23.0
text = "Score:"
label_settings = SubResource("LabelSettings_qh58e")
metadata/_edit_lock_ = true

[node name="score_value" type="Label" parent="CameraTarget/Camera3D/hud/score_container" index="1"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 132.0
offset_right = 315.0
offset_bottom = 55.0
text = "0"
label_settings = SubResource("LabelSettings_hr31g")

[node name="AimTarget" type="RayCast3D" parent="CameraTarget/Camera3D" index="2"]
unique_name_in_owner = true
editor_description = "Weapon targetting raycast so weapons aim correctly"
exclude_parent = false
target_position = Vector3(0, 0, -500)
collision_mask = 24
hit_back_faces = false
collide_with_areas = true

[node name="Hurtbox" type="Area3D" parent="." index="2"]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 0
monitoring = false
script = ExtResource("5_px5sl")
metadata/_custom_type_script = "uid://cx8x5g2jhcrm6"

[node name="collider" type="CollisionShape3D" parent="Hurtbox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("SphereShape3D_wfnr8")
debug_color = Color(0.998291, 0, 0.145787, 0.42)
